[package]
name = "plux-lua-manager"
description = "Lua plugin manager for Plux"
version = "0.1.1"
authors = ["Bleyn"]
license = "MIT"
homepage = "https://github.com/BleynChannel/plux-lua-manager"
repository = "https://github.com/BleynChannel/plux-lua-manager"
readme = "README.md"
keywords = ["plux", "lua", "plugin", "manager"]
categories = ["api-bindings", "development-tools"]
edition = "2024"

[features]
default = ["lua54"]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]

[dependencies]
# Core dependencies
plux-rs = "1.0.0"

# Lua integration
mlua = { version = "0.11.3", features = ["vendored", "send", "serialize"] }

# Configuration
toml = "0.9.5"
semver = { version = "1.0.26", features = ["serde"] }

# Utilities
hashbrown = { version = "0.16.0", features = ["serde"] }
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
